src/tests/testfiles/function-declarations/4.txt
Error at 6:1: Conflicting types for function declaration f
float f(int a, int b);
^
